Ingress/Ingress_No_Rule_Match/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations: 
    nginx.ingress.kubernetes.io/default-backend: default-backend
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: test-app
                port: 
                  number: 80fu
